# bio-ml-lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
results/: epochs_sweep.csv
runs/: example-seq-stats.json
scripts/: plot_curve.py  sweep_epochs.py
src/biomllab/: __init__.py  cli.py  sequences.py  tracking.py
src/biomllab/finetune/: MODEL_CARD.md  __init__.py  data.py  train.py
tests/: test_cli.py  test_finetune_data.py  test_finetune_train.py  test_sequences.py  test_tracking.py
