[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biomllab"
version = "0.1.0"
description = "Lab repo for the Anthropic Research Scientist (Life Sciences) prep: foundations, post-training experiments, and a professional Python baseline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Leandro" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
biomllab = "biomllab.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
# Fine-tuning stack (Phase 1 wk4 / Phase 2). CPU-only torch keeps it small.
ml = [
  "torch>=2.2",
  "transformers>=4.40",
  "accelerate>=1.1",
  "scikit-learn>=1.4",
  "numpy>=1.26",
]

[tool.hatch.build.targets.wheel]
packages = ["src/biomllab"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes, I: isort, UP: pyupgrade, B: bugbear, SIM: simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
warn_unused_configs = true

# Third-party ML libs ship without type stubs.
[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "sklearn.*", "tokenizers.*"]
ignore_missing_imports = true

# Glue code that wraps the (untyped) HF Trainer: keep our logic typed, but relax
# the rules that only fire because torch/transformers are themselves untyped.
[[tool.mypy.overrides]]
module = "biomllab.finetune.train"
disallow_untyped_calls = false
disallow_subclassing_any = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
